Altered default padding for .card-content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,11 @@ blockquote {
     margin-top: calc(1rem + 20px);
 }
 
+#createQuiz .card-content,
+#editQuiz .card-content {
+    padding: 1rem 2rem !important;
+}
+
 @media only screen and (max-width: 1200px) {
     .hide-on-large-and-down {
         display: none !important;
