Added autocomplete=off to form

--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id="createQuiz" class="container">
-        <form id="createQuizForm" method="post">
+        <form id="createQuizForm" autocomplete="off" method="post">
             <!-- Prevent Submission of Form on Enter Keypress -->
             <!-- https://stackoverflow.com/questions/895171/prevent-users-from-submitting-a-form-by-hitting-enter/51507806#51507806 -->
             <button class="hidden" type="submit" disabled></button>
