Altered .collapsible-body .title style rule Added not(h6 span) exclusion (Fixes incorrect styling in user search result cards)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -249,14 +249,14 @@ form .user-search .input-field {
 
 .collapsible-header.round-title,
 .collapsible-header.question-title,
-.collapsible-body .title {
+.collapsible-body :not(h6 span).title {
 	font-size: 24px;
 	font-weight: 300;
     line-height: 32px;
     margin-bottom: 1rem;
 }
 
-.collapsible-body .title {
+.collapsible-body :not(h6 span).title {
     display: block;
 }
 
