--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -213,7 +213,7 @@
                                                                     <div class="image-preview col s12 center-align">
                                                                     </div>
                                                                     <!-- Multiple Choice? -->
-                                                                    <span class="title col s12">Is this a multiple choice Question?</h1>
+                                                                    <span class="title col s12">Is this a multiple choice Question?</span>
                                                                     <div class="input-field col s12 checkbox-container">
                                                                         <i class="prefix light-blue-text text-darken-4"></i>
                                                                         <label id="quizMulti_{{ round.round_num }}_{{ question.question_num }}">
