--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -9,28 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <title>Pimp My Quiz!</title>
-    <style>
-        @media print {
-            {% for round in viewQuiz.rounds %}
-                {% for question in round.questions %}
-                    {% if question.question_img_url != '' %}
-                        #img_q_{{ round.round_num }}_{{ question.question_num }} {
-
-                        }
-                    {% endif %}
-                    {% if question.multiple_choice == True %}
-                        {% for option in question.multiple_choice_options %}
-                            {% if option.answer_img_url != '' %}
-                                #img_o_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }} {
-
-                                }
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-            {% endfor %}
-        }
-    </style>
 </head>
 <body>
     <main id="quizSheet" class="container">
@@ -60,22 +38,24 @@
                         <div class="question-container row">
                         {% for question in round.questions %}
                             {% if loop.last and question.question_num is odd %}
-                                <div class="center-align col s12 page-break-inside-avoid">
+                                <div class="col s12 page-break-inside-avoid">
                                     <div class="row">
                                         <div class="col s3"></div>
                                         <div class="col s6">
-                                            <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
-                                            <div class="preloader-container">
-                                                <div class="preloader-wrapper big active">
-                                                    <div class="spinner-layer">
-                                                        <div class="circle-clipper left">
-                                                            <div class="circle"></div>
-                                                        </div>
-                                                        <div class="gap-patch">
-                                                            <div class="circle"></div>
-                                                        </div>
-                                                        <div class="circle-clipper right">
-                                                            <div class="circle"></div>
+                                            <div class="image-preview">
+                                                <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
+                                                <div class="preloader-container">
+                                                    <div class="preloader-wrapper big active">
+                                                        <div class="spinner-layer">
+                                                            <div class="circle-clipper left">
+                                                                <div class="circle"></div>
+                                                            </div>
+                                                            <div class="gap-patch">
+                                                                <div class="circle"></div>
+                                                            </div>
+                                                            <div class="circle-clipper right">
+                                                                <div class="circle"></div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -89,19 +69,21 @@
                                     </div>
                                 </div>
                             {% else %}
-                                <div class="center-align col s6 page-break-inside-avoid">
-                                    <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
-                                    <div class="preloader-container">
-                                        <div class="preloader-wrapper big active">
-                                            <div class="spinner-layer">
-                                                <div class="circle-clipper left">
-                                                    <div class="circle"></div>
-                                                </div>
-                                                <div class="gap-patch">
-                                                    <div class="circle"></div>
-                                                </div>
-                                                <div class="circle-clipper right">
-                                                    <div class="circle"></div>
+                                <div class="col s6 page-break-inside-avoid">
+                                    <div class="image-preview">
+                                        <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image small hidden inline-block" src="">
+                                        <div class="preloader-container">
+                                            <div class="preloader-wrapper big active">
+                                                <div class="spinner-layer">
+                                                    <div class="circle-clipper left">
+                                                        <div class="circle"></div>
+                                                    </div>
+                                                    <div class="gap-patch">
+                                                        <div class="circle"></div>
+                                                    </div>
+                                                    <div class="circle-clipper right">
+                                                        <div class="circle"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -188,15 +170,15 @@
                     {% endif %}
                 </div>
             {% endfor %}
-        </>
+        </div>
     </main>
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="{{ url_for('static', filename='js/script.js') }}"></script>
-<script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
-<script>
-    $(function() {
-        loadImg({{ viewQuiz.rounds | tojson }});
-    });
-</script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
+    <script>
+        $(function() {
+            loadImg({{ viewQuiz.rounds | tojson }});
+        });
+    </script>
+</body>
