Changed id of #dupTitleModal #modalSubmitButton to #modalCopyQuizButton Changed text of #modalCopyQuizButton from 'save Changes' to 'Copy Quiz' Changed icon on #modalCopyQuizButton from fa-user-check to fa-copy

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,8 +105,8 @@
                 </div>
                 <!-- save changes -->
                 <div class="row modal-action-container">
-                    <button id="modalSubmitButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Save Changes <i class="fas fa-user-check"></i>
+                    <button id="modalCopyQuizButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        Copy Quiz <i class="fas fa-copy"></i>
                     </button>
                 </div>
             </div>
