Altered internal doc ready func Changed ref to #modalSubmitButton to #modalCopyQuizButton

--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -133,7 +133,7 @@
     <script>
         $(function() {
           loadImg({{ viewQuiz.rounds | tojson }});
-          $('#modalSubmitButton').attr('data-quizId', '{{ viewQuiz._id }}');
+          $('#modalCopyQuizButton').attr('data-quizId', '{{ viewQuiz._id }}');
         });
     </script>
 {% endblock %}
