Altered internal JS Adjusted createRoleArray() call inline with changes to script.js

--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -226,7 +226,7 @@
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/editusers.js') }}"></script>
     <script>
-        // Convert mongoDB data to JS global array for use in this template
-        let roleList = createRoleArray({{ user_roles | tojson }});
+        // Parse mongoDB data into JS global array for use in this template
+        createRoleArray({{ user_roles | tojson }});
     </script>
 {% endblock %}
