Altered internal JS Adjusted createCategoryArray() call inline with changes to script.js

--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -367,7 +367,7 @@
     <script src="{{ url_for('static', filename='js/editquiz.js') }}"></script>
     <script>
         // Convert mongoDB data to JS global array for use in this template
-        let categoryList = createCategoryArray({{ quiz_categories | tojson }});
+        createCategoryArray({{ quiz_categories | tojson }});
 
         $(function () {
             let initialSelectVals = [{
