--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -3,6 +3,9 @@
     <!-- Modal Structure -->
     <div id="editUserModal" class="modal">
         <form class="col s12" method="POST" action="">
+            <!-- Prevent Submission of Form on Enter Keypress -->
+            <!-- https://stackoverflow.com/questions/895171/prevent-users-from-submitting-a-form-by-hitting-enter/51507806#51507806 -->
+            <button class="hidden" type="submit" disabled></button>
             <div class="modal-content">
                 <!-- title and close button -->
                 <div class="modal-title-row row">
@@ -27,8 +30,8 @@
                     </ul>
                     <div class="input-field col s12">
                         <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
-                        <input id="modalUserId" name="user_id" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="" required>
-                        <label for="modalUserId" data-error="Invalid Username." data-default="User Id">User Id</label>
+                        <input id="modalUserId" name="user_id" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" value="" required>
+                        <label for="modalUserId" data-error="Invalid Username." data-dup="Username already in use.  Please choose another." data-default="User Id">User Id</label>
                         <input id="modalOrigUserId" class="hidden" name="orig_user_id" type="text" value="">
                     </div>
                 </div>
@@ -46,7 +49,7 @@
                     </ul>
                     <div class="input-field col s12">
                         <i class="fas fa-envelope prefix light-blue-text text-darken-4"></i>
-                        <input id="modalUserEmail" name="email" type="email" class="validate" value="" required>
+                        <input id="modalUserEmail" name="email" type="email" value="" required>
                         <label for="modalUserEmail" data-error="Invalid Email Address." data-default="Email">Email</label>
                     </div>
                 </div>
@@ -105,7 +108,7 @@
                                 </ul>
                                 <div class="input-field password col s12">
                                     <i class="fas fa-user-lock prefix light-blue-text text-darken-4"></i>
-                                    <input id="modalUserPwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" disabled="true" required>
+                                    <input id="modalUserPwd" name="pwd" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" disabled="true" required>
                                     <label for="modalUserPwd" data-error="Invalid Password." data-default="Password">Password</label>
                                 </div>
                                 <!-- password confirmation -->
