--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         </ul>
     </header>
 
-    <section>
+    <section id="flashSection">
         <!-- flash messages -->
         {% with messages = get_flashed_messages() %}
             {% if messages %}
